added back bibliography

--- a/main.tex
+++ b/main.tex
@@ -868,8 +868,8 @@ which was implied by our list of desiderata above.  Formula \ref{eq:contourconfi
 % \end{itemize}
 % \end{multicols}
 
-% \bibliographystyle{apacite}
-% \bibliography{MyBibliography1}
+\bibliographystyle{apacite}
+\bibliography{MyBibliography1}
 
 %\newpage
 %\clearpage
